# zk-prover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
Scripts/: generate_rq2_figures.py
benchmarks/svcomp-initial/: README.md  manifest.toml
benchmarks/zkunsat-exp2/: README.md  manifest.csv  stable_artifact_instances.csv  svcomp_instances.csv  svcomp_selected.csv
crates/p3-lookup-backend/: Cargo.toml
crates/p3-lookup-backend/src/: lib.rs
crates/resolution-verifier-core/: Cargo.toml
crates/resolution-verifier-core/src/: lib.rs
crates/zkpv-btor2/: Cargo.toml
crates/zkpv-btor2/src/: lib.rs
crates/zkpv-c0-ast/: Cargo.toml
crates/zkpv-c0-ast/src/: lib.rs
crates/zkpv-c0-lowering/: Cargo.toml
crates/zkpv-c0-lowering/src/: lib.rs
crates/zkpv-c0-parser/: Cargo.toml
crates/zkpv-c0-parser/src/: lib.rs
crates/zkpv-ir/: Cargo.toml
crates/zkpv-ir/src/: lib.rs
docker/: README.md  zkunsat-local.patch
examples/: bench_phase2_sat.rs  bench_resolution_zkvms.rs  bench_unsat_pipeline.rs  bench_zkunsat_exp2.rs
proofs/rocq/: .gitignore  Makefile  README.md  _CoqProject  zk-prover-rocq.opam
proofs/rocq/theories/ZkProver/: SatUnsat.v
scripts/: collect_zkunsat_exp2_results.py  format_rq1_results.py  gen_range_pack_family.py  prepare_zkunsat_exp2_combined.sh  prepare_zkunsat_exp2_stable.py  prepare_zkunsat_exp2_svcomp.py  prepare_zkunsat_exp2_svcomp.sh  run_rq1_bench.sh  run_svcomp_bench.sh  run_unsat_bench.sh  run_unsat_scale_bench.sh  run_zkunsat_exp2.sh
scripts/docker/: build_image.sh  install_zkunsat.sh  reproduce_paper.sh
src/: lib.rs
src/backend/: cnf.rs  encoder.rs  mod.rs  phase2.rs
src/backend/halo2/: hyperplonk.rs
src/backend/plonky3/: air.rs
src/frontend/: fixtures.rs  ir.rs  mod.rs  normalize.rs
src/frontend/runtime/runner/: Cargo.toml  build.rs
src/frontend/runtime/runner/src/: main.rs
src/frontend/runtime/zkvm/: Cargo.toml
src/frontend/runtime/zkvm/src/: main.rs
tests/fixtures/: README.md
tests/fixtures/svcomp-unrolled/loop-invgen/: down_3_unrolled.c  large_const_2_unrolled.c
tests/fixtures/svcomp-unrolled/loop-lit/: bhmr2007_3_bug_unrolled.c
tests/fixtures/synthetic-c/validation-crafted/: abs_zero_bug.c  branch_sum_bug.c  branch_sum_safe.c  diamond_safe.c  equality_chain_bug.c  nested_guard_bug.c  nested_guard_safe.c  range_arith_safe.c  range_pack_2_safe.c  range_pack_4_safe.c  range_pack_8_safe.c
