[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["src/frontend/runtime/runner", "src/frontend/runtime/zkvm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
sp1-build = "6.0.2"
sp1-sdk = { version = "6.0.2", features = ["blocking"] }
sp1-zkvm = "6.0.2"
thiserror = "1"
zkpv-c0-ast = { path = "../ztor/workspaces/frontend/crates/c0-ast" }
zkpv-c0-lowering = { path = "../ztor/workspaces/frontend/crates/c0-lowering" }
zkpv-c0-parser = { path = "../ztor/workspaces/frontend/crates/c0-parser" }

[dependencies]
serde.workspace = true
thiserror.workspace = true
zkpv-c0-ast.workspace = true
zkpv-c0-lowering.workspace = true
zkpv-c0-parser.workspace = true
