[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
backend-solver = ["dep:varisat"]
backend-plonky3 = [
    "dep:p3-air",
    "dep:p3-baby-bear",
    "dep:p3-batch-stark",
    "dep:p3-challenger",
    "dep:p3-commit",
    "dep:p3-dft",
    "dep:p3-field",
    "dep:p3-fri",
    "dep:p3-lookup",
    "dep:p3-matrix",
    "dep:p3-merkle-tree",
    "dep:p3-lookup-backend",
    "dep:p3-symmetric",
    "dep:p3-uni-stark",
    "dep:rand",
]
backend-hyperplonk = ["dep:plonkish_backend", "dep:rand08"]
proof-backends = ["backend-solver", "backend-plonky3", "backend-hyperplonk"]

[workspace]
members = [
    "crates/p3-lookup-backend",
    "crates/resolution-verifier-core",
    "crates/zkpv-ir",
    "crates/zkpv-btor2",
    "crates/zkpv-c0-ast",
    "crates/zkpv-c0-parser",
    "crates/zkpv-c0-lowering",
    "src/frontend/runtime/runner",
    "src/frontend/runtime/zkvm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
resolution-verifier-core = { path = "crates/resolution-verifier-core" }
serde = { version = "1", features = ["derive"] }
sp1-build = "6.0.2"
sp1-sdk = { version = "6.0.2", features = ["blocking"] }
sp1-zkvm = "6.0.2"
thiserror = "1"
winnow = "1.0"
zkpv-c0-ast = { path = "crates/zkpv-c0-ast" }
zkpv-c0-lowering = { path = "crates/zkpv-c0-lowering" }
zkpv-c0-parser = { path = "crates/zkpv-c0-parser" }

[dependencies]
p3-air = { version = "0.5.2", optional = true }
p3-baby-bear = { version = "0.5.2", optional = true }
p3-batch-stark = { version = "0.5.2", optional = true }
p3-challenger = { version = "0.5.2", optional = true }
p3-commit = { version = "0.5.2", optional = true }
p3-dft = { version = "0.5.2", optional = true, features = ["parallel"] }
p3-field = { version = "0.5.2", optional = true }
p3-fri = { version = "0.5.2", optional = true }
p3-lookup = { version = "0.5.2", optional = true }
p3-lookup-backend = { path = "crates/p3-lookup-backend", optional = true }
p3-matrix = { version = "0.5.2", optional = true }
p3-merkle-tree = { version = "0.5.2", optional = true }
p3-symmetric = { version = "0.5.2", optional = true }
p3-uni-stark = { version = "0.5.2", optional = true, features = ["parallel"] }
plonkish_backend = { git = "https://github.com/Noi1r/plonkish", rev = "4ca545c17d3fc28e2f2fbe8220afd3e5b9b9b28e", default-features = false, features = ["parallel"], optional = true }
rand = { version = "0.10.0", features = ["std_rng"], optional = true }
rand08 = { package = "rand", version = "0.8", features = ["std_rng"], optional = true }
resolution-verifier-core.workspace = true
serde.workspace = true
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true
varisat = { version = "0.2.2", optional = true }
walkdir = "2"
zkpv-c0-ast.workspace = true
zkpv-c0-lowering.workspace = true
zkpv-c0-parser.workspace = true
